corrected body overflowing margin-left

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
     background-color: white;
-    margin: 0px! important;
+    margin: -17px! important;
     padding: 0px;
     border: 0px;
     font: inherit;
